[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Manage Entity.gd" type="Script" id=1]
[ext_resource path="res://Interface/Manage Category.tscn" type="PackedScene" id=2]

[node name="Manage" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 8.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="NameLab" type="Label" parent="VBoxContainer"]
margin_right = 1016.0
margin_bottom = 14.0
clip_text = true

[node name="TabContainer" type="TabContainer" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 1016.0
margin_bottom = 588.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Names" type="Panel" parent="VBoxContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/TabContainer/Names"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TabContainer/Names/VBoxContainer"]
margin_right = 1008.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/Names/VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 78.0
margin_bottom = 19.0
text = "New Name: "

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/TabContainer/Names/VBoxContainer/HBoxContainer"]
margin_left = 82.0
margin_right = 140.0
margin_bottom = 24.0
expand_to_text_length = true
caret_blink = true

[node name="NewNameButt" type="Button" parent="VBoxContainer/TabContainer/Names/VBoxContainer/HBoxContainer"]
margin_left = 144.0
margin_right = 181.0
margin_bottom = 24.0
text = "Add"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/TabContainer/Names/VBoxContainer"]
margin_top = 28.0
margin_right = 1008.0
margin_bottom = 534.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/TabContainer/Names/VBoxContainer/ScrollContainer"]
margin_right = 1008.0
margin_bottom = 506.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Relationships" type="Panel" parent="VBoxContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/TabContainer/Relationships"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1.0
margin_bottom = 2.0
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/TabContainer/Relationships/ScrollContainer"]
margin_right = 1009.0
margin_bottom = 536.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Category" parent="VBoxContainer/TabContainer" instance=ExtResource( 2 )]
visible = false
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Other" type="Panel" parent="VBoxContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/TabContainer/Other"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="DeleteButt" type="Button" parent="VBoxContainer/TabContainer/Other/VBoxContainer"]
margin_right = 1008.0
margin_bottom = 20.0
custom_colors/font_color_focus = Color( 1, 0, 0, 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Delete"

[node name="DeleteTimer" type="Timer" parent="VBoxContainer/TabContainer/Other/VBoxContainer/DeleteButt"]

[connection signal="pressed" from="VBoxContainer/TabContainer/Names/VBoxContainer/HBoxContainer/NewNameButt" to="." method="_on_NewNameButt_pressed"]
[connection signal="pressed" from="VBoxContainer/TabContainer/Other/VBoxContainer/DeleteButt" to="." method="_on_DeleteButt_pressed"]
[connection signal="timeout" from="VBoxContainer/TabContainer/Other/VBoxContainer/DeleteButt/DeleteTimer" to="." method="_on_DeleteTimer_timeout"]
